# next.js

./: CODE_OF_CONDUCT.md  Cargo.toml  UPGRADING.md  contributing.md  eslint.cli.config.mjs  eslint.config.mjs  jest.config.js  lerna.json  license.md  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-tests.js  rust-toolchain.toml  tsconfig.json
.config/: eslintignore.mjs
.devcontainer/rust/: devcontainer-feature.json
.github/: labeler.json
.github/workflows/: build_and_test.yml  build_reusable.yml  pull_request_stats.yml  release-next-rspack.yml  test_e2e_project_reset_cron.yml  trigger_release.yml  trigger_release_new.yml  turbopack-benchmark.yml
apps/docs/: package.json
bench/module-cost/: package.json
crates/napi/: Cargo.toml  build.rs
crates/next-build-test/: nextConfig.json
crates/next-core/: Cargo.toml
errors/: app-static-to-dynamic-error.mdx  blocking-route.mdx  empty-generate-static-params.mdx  invalid-prefetch-configuration.mdx  missing-suspense-with-csr-bailout.mdx  revalidate-tag-single-arg.mdx  sync-dynamic-apis.mdx
rspack/: change-npm-name.js  package.json  pnpm-lock.yaml
scripts/: devlow-bench.mjs  generate-release-log.mjs  next-with-deps.sh  publish-release.js  start-release.js  sync-react.js  test-new-tests.mjs
scripts/send-trace-to-jaeger/: Cargo.toml
test/: cache-components-tests-manifest.json  deploy-tests-manifest.json  rspack-build-tests-manifest.json  rspack-dev-tests-manifest.json  turbopack-build-tests-manifest.json  turbopack-dev-tests-manifest.json
test-config-errors/: next.config.js
(+946 files in other folders)
